// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The TileFeed component renders correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "content": Object {
          "speaker": "Marty McFly",
        },
        "id": "fakeId0",
        "meta": Object {
          "date": "Sat Oct 26 1985 01:24:00 GMT+0008 (UTC)",
        },
        "title": "Why Jesus is Timeless",
      },
      Object {
        "content": Object {
          "speaker": "Marty McFly",
        },
        "id": "fakeId1",
        "meta": Object {
          "date": "Sat Oct 26 1985 01:24:00 GMT+0008 (UTC)",
        },
        "title": "Why Jesus is Timeless",
      },
    ]
  }
  decelerationRate="fast"
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  initialNumToRender={10}
  initialScrollIndex={0}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  snapToAlignment="start"
  snapToInterval={590}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "height": 600,
      "paddingBottom": 10,
      "paddingHorizontal": 10,
    }
  }
  tileHeight={600}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#303030",
                          "fontFamily": "Colfax-Bold",
                          "fontSize": 15.75,
                          "lineHeight": 17.75,
                          "paddingBottom": 1.8,
                          "paddingTop": 4.5,
                        }
                      }
                    >
                      1
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "Colfax-Bold",
                        "fontSize": 25.2,
                        "lineHeight": 31.28,
                        "paddingBottom": 3.71,
                        "paddingTop": 5.04,
                      }
                    }
                  >
                    Why Jesus Is Timeless
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#303030",
                          "fontFamily": "Colfax-Bold",
                          "fontSize": 15.75,
                          "lineHeight": 17.75,
                          "paddingBottom": 1.8,
                          "paddingTop": 4.5,
                        }
                      }
                    >
                      2
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#303030",
                        "fontFamily": "Colfax-Bold",
                        "fontSize": 25.2,
                        "lineHeight": 31.28,
                        "paddingBottom": 3.71,
                        "paddingTop": 5.04,
                      }
                    }
                  >
                    Why Jesus Is Timeless
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`The TileFeed component renders empty state 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "content": Object {
          "speaker": "",
        },
        "id": "fakeId0",
        "isLoading": true,
        "meta": Object {
          "date": "",
        },
        "title": "",
      },
      Object {
        "content": Object {
          "speaker": "",
        },
        "id": "fakeId1",
        "isLoading": true,
        "meta": Object {
          "date": "",
        },
        "title": "",
      },
      Object {
        "content": Object {
          "speaker": "",
        },
        "id": "fakeId2",
        "isLoading": true,
        "meta": Object {
          "date": "",
        },
        "title": "",
      },
      Object {
        "content": Object {
          "speaker": "",
        },
        "id": "fakeId3",
        "isLoading": true,
        "meta": Object {
          "date": "",
        },
        "title": "",
      },
      Object {
        "content": Object {
          "speaker": "",
        },
        "id": "fakeId4",
        "isLoading": true,
        "meta": Object {
          "date": "",
        },
        "title": "",
      },
    ]
  }
  decelerationRate="fast"
  disableVirtualization={false}
  fetchMore={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  initialNumToRender={10}
  initialScrollIndex={0}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  snapToAlignment="start"
  snapToInterval={590}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "height": 600,
      "paddingBottom": 10,
      "paddingHorizontal": 10,
    }
  }
  tileHeight={600}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 45,
                        "width": 45,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 25.2,
                        "marginVertical": 3.040000000000001,
                        "width": "80%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 45,
                        "width": 45,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 25.2,
                        "marginVertical": 3.040000000000001,
                        "width": "80%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 45,
                        "width": 45,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 25.2,
                        "marginVertical": 3.040000000000001,
                        "width": "80%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 45,
                        "width": 45,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 25.2,
                        "marginVertical": 3.040000000000001,
                        "width": "80%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          collapsable={false}
          style={
            Object {
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 6,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  size={1}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomRightRadius": 6,
                      "borderTopLeftRadius": 6,
                      "height": 36,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 36,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 45,
                        "width": 45,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Object {
                      "paddingHorizontal": 20,
                      "paddingVertical": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignSelf": "stretch",
                        "backgroundColor": "#f7f7f7",
                        "borderRadius": 6,
                        "height": 25.2,
                        "marginVertical": 3.040000000000001,
                        "width": "80%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
